more formatting changes to the docstrings, to make the doco look better in Postman and on Contoso
